--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     <div id="content">
         <p>Информация об авторе</p>
-        <img src="images/photo.png" alt="Фото автора" width="200" height="250">
+        <img src="images/photo.jpg" alt="Фото Тришина Никиты" width="200" height="250">
         <p>Тришин Никита Дмитриевич</p>
         <p>ЭФБО-18-24</p>
         <p>Обо мне: Я родился в Москве в 70-м на краю города. Глупость рано ударила в голову. В четыре активно ругался.
