--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <div id="menu">
         <ul>
             <li><a href="index.html">Главная</a></li>
-            <li><a href="news.html">Новости</a></li>
-            <li><a href="practices.html">Практики</a></li> 
-            <li><a href="goods.html">Товары</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
+            <li><a href="pages/news.html">Новости</a></li>
+            <li><a href="pages/practices.html">Практики</a></li> 
+            <li><a href="pages/goods.html">Товары</a></li>
+            <li><a href="pages/contacts.html">Контакты</a></li>
         </ul>
     </div>
     <div id="content">
         <p>Информация об авторе</p>
-        <img src="images/photo.jpg" alt="Фото Тришина Никиты" width="200" height="250">
+        <img src="images/photo.jpg" alt="Фото автора" width="200" height="250">
         <p>Тришин Никита Дмитриевич</p>
         <p>ЭФБО-18-24</p>
         <p>Обо мне: Я родился в Москве в 70-м на краю города. Глупость рано ударила в голову. В четыре активно ругался.
