Исправил путь к картинке наушников в коде

--- a/pages/goods.html
+++ b/pages/goods.html
@@ -39,7 +39,7 @@
         
         <!-- Товар 3 -->
         <div class="product-card">
-            <img src="../images/goods/headphones.png" alt="Наушники" width="200" height="150">
+            <img src="../images/goods/headphones.jpg" alt="Наушники" width="200" height="150">
             <h3>Наушники Sony WH-1000XM4</h3>
             <p>Беспроводные наушники с шумоподавлением</p>
             <p><strong>Цена:</strong> 12 000 руб.</p>
