Замена почты на trishin.n.d@edu.mirea.ru в contacts.html

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -25,7 +25,7 @@
             <h2>Контактная информация</h2>
             
             <p><strong>Электронная почта:</strong></p>
-            <p>trishin.nikita@example.com</p>
+            <p>trishin.n.d@edu.mirea.ru</p>
             
             <p><strong>Адрес:</strong></p>
             <p>г. Москва, ул. Студенческая, д. 15, офис 304</p>
