--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
                 <div class="profile-header">
                     <h1 class="profile-title">Информация об авторе</h1>
                     <img class="profile-photo" src="images/photo.png" alt="Фото автора">
-                    <h2 class="profile-name">Иванов Иван Иванович</h2>
-                    <p class="profile-group">ЭФБО-00-00</p>
+                    <h2 class="profile-name">Тришин Никита Дмитриевич</h2>
+                    <p class="profile-group">ЭФБО-18-24</p>
                 </div>
                 
                 <div class="about-me">
