feat: complete index.html with styled navigation and content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="content">
             <div class="profile-header">
                 <h1 class="profile-title">Информация об авторе</h1>
-                <img class="profile-photo" src="images/photo.jpg" alt="Фото автора">
+                <img class="profile-photo" src="images/photo.jpg" alt="Фото Тришина Никиты">
                 <h2 class="profile-name">Тришин Никита Дмитриевич</h2>
                 <p class="profile-group">ЭФБО-18-24</p>
             </div>
